default controller and pwn change maps and modes configguration

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GlobalDefaultGameMode=/Game/blueprint/game/BP_EDM1507_GameMode.BP_EDM1507_GameMode_C
+EditorStartupMap=/Game/levels/l_MainLevel.l_MainLevel
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
